fixing skyline and overflow issue

--- a/less/_reset.less
+++ b/less/_reset.less
@@ -1,8 +1,10 @@
 * { box-sizing: border-box; }
 
 html,body {
+  height: 100%;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
+  width: 100%;
 }
 
 root {
